<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.jobcomparison.fragment.MenuFragment">


    <Button
        android:id="@+id/button_add_job"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_job_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button_compare_jobs"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/compare_jobs_txt"
        app:layout_constraintTop_toBottomOf="@+id/button_add_job"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button_add_update_weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_update_weight_txt"
        app:layout_constraintTop_toBottomOf="@+id/button_compare_jobs"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>