<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="edu.gatech.jobcomparison.fragment.AddJobFragment">

    <TextView
        android:id="@+id/tv_current_job_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_job_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_txt"
        android:layout_marginStart="100dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/swch_current_job"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/swch_current_job" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swch_current_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_no_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_job_label"
        app:layout_constraintTop_toTopOf="@id/tv_current_job_label" />
    <TextView
        android:id="@+id/tv_yes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_txt"
        android:textColor="@color/black"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/swch_current_job"
        app:layout_constraintStart_toEndOf="@+id/swch_current_job"
        app:layout_constraintTop_toTopOf="@id/swch_current_job" />
    <TextView
        android:id="@+id/tv_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_job_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_job_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_job_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="@drawable/round_edittext"
        android:gravity="center_horizontal"
        android:hint="@string/title_txt"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_job_label" />

    <TextView
        android:id="@+id/tv_company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_company" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edittext"
        android:gravity="center_horizontal"
        android:hint="@string/company_txt"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_job_title" />

    <TextView
        android:id="@+id/tv_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_location" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edittext"
        android:gravity="center_horizontal"
        android:hint="@string/location_txt"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_company" />


    <Button
        android:id="@+id/button_compensation_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/compensation_package_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_location" />

</androidx.constraintlayout.widget.ConstraintLayout>